Building should work now. Failed to correctly name the generated class, as it was referred to in the create_account_window class.

--- a/create_account_window.ui
+++ b/create_account_window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Widget</class>
- <widget class="QWidget" name="Widget">
+ <class>create_account_window</class>
+ <widget class="QWidget" name="create_account_window">
   <property name="geometry">
    <rect>
     <x>0</x>
