Made the create an account window open when the button is pressed, as well as made the window close upon either cancel or create. Next step would be to fill in the handlers in create_account_window.cpp with the appropriate action for each. Cancel is probably done, but the create button should send data to the server.

--- a/create_account_window.ui
+++ b/create_account_window.ui
@@ -65,7 +65,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="create_button">
    <property name="geometry">
     <rect>
      <x>160</x>
@@ -78,7 +78,7 @@
     <string>Create Account</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
      <x>340</x>
