Renamed the cancel button in the reset password ui.

--- a/reset_password_window.ui
+++ b/reset_password_window.ui
@@ -58,7 +58,7 @@
     <string>Reset</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
      <x>300</x>
