--- a/manage_groups.ui
+++ b/manage_groups.ui
@@ -39,7 +39,7 @@
     <string>Create New Group</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
      <x>260</x>
