--- a/create_group_event.ui
+++ b/create_group_event.ui
@@ -6,33 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>385</width>
+    <height>371</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Create A Group Event </string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>0</y>
-     <width>281</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>19</x>
-     <y>12</y>
-     <width>211</width>
-     <height>101</height>
+     <x>10</x>
+     <y>10</y>
+     <width>361</width>
+     <height>136</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -54,7 +41,7 @@
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QLineEdit" name="location_text"/>
+     <widget class="QLineEdit" name="location_input"/>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="end_time">
@@ -63,8 +50,8 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="title_text"/>
+    <item row="2" column="1">
+     <widget class="QTimeEdit" name="begin_time_edit"/>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="begin_time">
@@ -73,29 +60,16 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QTimeEdit" name="begin_time_edit"/>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="title_input"/>
     </item>
    </layout>
-  </widget>
-  <widget class="QPushButton" name="back">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>260</y>
-     <width>113</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Back</string>
-   </property>
   </widget>
   <widget class="QPushButton" name="cancel">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>260</y>
+     <x>190</x>
+     <y>330</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -107,8 +81,8 @@
   <widget class="QPushButton" name="create_event">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>260</y>
+     <x>60</x>
+     <y>330</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -121,8 +95,8 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>120</y>
-     <width>91</width>
+     <y>150</y>
+     <width>71</width>
      <height>21</height>
     </rect>
    </property>
@@ -130,34 +104,11 @@
     <string>ATTENDEES</string>
    </property>
   </widget>
-  <widget class="QScrollArea" name="scroll">
-   <property name="geometry">
-    <rect>
-     <x>29</x>
-     <y>149</y>
-     <width>221</width>
-     <height>101</height>
-    </rect>
-   </property>
-   <property name="widgetResizable">
-    <bool>true</bool>
-   </property>
-   <widget class="QWidget" name="scrollAreaWidgetContents_2">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>219</width>
-      <height>99</height>
-     </rect>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QPushButton" name="delete_2">
+  <widget class="QPushButton" name="delete_member">
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>140</y>
+     <y>240</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -170,13 +121,33 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>180</y>
+     <y>290</y>
      <width>113</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
     <string>Add Member</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="user_to_add">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>290</y>
+     <width>241</width>
+     <height>30</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QListWidget" name="attendees_list">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>170</y>
+     <width>241</width>
+     <height>101</height>
+    </rect>
    </property>
   </widget>
  </widget>
