--- a/account_settings.ui
+++ b/account_settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>611</width>
-    <height>461</height>
+    <width>381</width>
+    <height>311</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>60</y>
+     <x>10</x>
+     <y>10</y>
      <width>361</width>
      <height>241</height>
     </rect>
@@ -78,21 +78,21 @@
   <widget class="QPushButton" name="save_changes">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>330</y>
+     <x>50</x>
+     <y>260</y>
      <width>121</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>Save Changes</string>
+    <string>Save</string>
    </property>
   </widget>
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>330</y>
+     <x>200</x>
+     <y>260</y>
      <width>131</width>
      <height>41</height>
     </rect>
