--- a/add_group.ui
+++ b/add_group.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>332</width>
+    <height>261</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,86 +16,82 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>50</y>
-     <width>231</width>
-     <height>181</height>
+     <x>10</x>
+     <y>10</y>
+     <width>311</width>
+     <height>161</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit"/>
+     <widget class="QLineEdit" name="group_name"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Group Subject:</string>
+       <string>Group Name:</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Add participants:</string>
+       <string>Participants:</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QScrollArea" name="participants">
-      <property name="widgetResizable">
-       <bool>true</bool>
-      </property>
-      <widget class="QWidget" name="scrollAreaWidgetContents">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>121</width>
-         <height>141</height>
-        </rect>
-       </property>
-       <widget class="QScrollBar" name="verticalScrollBar">
-        <property name="geometry">
-         <rect>
-          <x>100</x>
-          <y>0</y>
-          <width>16</width>
-          <height>131</height>
-         </rect>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-       </widget>
-      </widget>
-     </widget>
+     <widget class="QListWidget" name="member_list"/>
     </item>
    </layout>
   </widget>
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>260</y>
+     <x>170</x>
+     <y>220</y>
      <width>88</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>Back</string>
+    <string>Cancel</string>
    </property>
   </widget>
   <widget class="QPushButton" name="add_group_button">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>260</y>
+     <x>70</x>
+     <y>220</y>
      <width>88</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
     <string>Add Group</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="add_member_input">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>180</y>
+     <width>211</width>
+     <height>30</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="add_member">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>180</y>
+     <width>88</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add Member</string>
    </property>
   </widget>
  </widget>
