--- a/manage_groups.ui
+++ b/manage_groups.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>264</width>
-    <height>233</height>
+    <width>265</width>
+    <height>270</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>190</y>
+     <y>230</y>
      <width>121</width>
      <height>32</height>
     </rect>
@@ -43,13 +43,13 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>190</y>
+     <y>230</y>
      <width>113</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
-    <string>Back</string>
+    <string>Cancel</string>
    </property>
   </widget>
   <widget class="QListView" name="list_groups">
@@ -60,6 +60,19 @@
      <width>241</width>
      <height>151</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="delete_group">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>190</y>
+     <width>88</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Delete Group</string>
    </property>
   </widget>
  </widget>
