--- a/reset_password_window.ui
+++ b/reset_password_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>361</width>
-    <height>241</height>
+    <height>143</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,12 +19,12 @@
      <x>10</x>
      <y>10</y>
      <width>341</width>
-     <height>181</height>
+     <height>81</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit_2"/>
+     <widget class="QLineEdit" name="email_input"/>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_2">
@@ -34,7 +34,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="lineEdit"/>
+     <widget class="QLineEdit" name="username_input"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_3">
@@ -48,8 +48,8 @@
   <widget class="QPushButton" name="reset_button">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>200</y>
+     <x>50</x>
+     <y>100</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -61,8 +61,8 @@
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>200</y>
+     <x>200</x>
+     <y>100</y>
      <width>113</width>
      <height>32</height>
     </rect>
