--- a/create_group_event.ui
+++ b/create_group_event.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>385</width>
+    <width>383</width>
     <height>371</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>10</y>
      <width>361</width>
-     <height>136</height>
+     <height>138</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -94,8 +94,8 @@
   <widget class="QLabel" name="attendees">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>150</y>
+     <x>150</x>
+     <y>200</y>
      <width>71</width>
      <height>21</height>
     </rect>
@@ -104,37 +104,24 @@
     <string>ATTENDEES</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="delete_member">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>240</y>
-     <width>113</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Delete</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="add_member">
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>290</y>
+     <y>160</y>
      <width>113</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
-    <string>Add Member</string>
+    <string>Add Group</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="user_to_add">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>290</y>
+     <y>160</y>
      <width>241</width>
      <height>30</height>
     </rect>
@@ -144,10 +131,23 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>170</y>
-     <width>241</width>
+     <y>220</y>
+     <width>361</width>
      <height>101</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>190</y>
+     <width>361</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
    </property>
   </widget>
  </widget>
