--- a/reset_password_window.ui
+++ b/reset_password_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>361</width>
-    <height>143</height>
+    <height>161</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,12 +19,22 @@
      <x>10</x>
      <y>10</y>
      <width>341</width>
-     <height>81</height>
+     <height>104</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="1">
      <widget class="QLineEdit" name="email_input"/>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="new_password_input"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>New Password:</string>
+      </property>
+     </widget>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_2">
@@ -48,8 +58,8 @@
   <widget class="QPushButton" name="reset_button">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>100</y>
+     <x>40</x>
+     <y>120</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -61,8 +71,8 @@
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>100</y>
+     <x>190</x>
+     <y>120</y>
      <width>113</width>
      <height>32</height>
     </rect>
