--- a/createevent.ui
+++ b/createevent.ui
@@ -6,106 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>381</width>
+    <height>650</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>381</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Creating a Personal Event</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>50</y>
-     <width>71</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Title:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>90</y>
-     <width>71</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Location:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>130</y>
-     <width>71</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Begin Time:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_5">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>170</y>
-     <width>71</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>End Time:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineTitle">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>50</y>
-     <width>113</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineLocation">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>90</y>
-     <width>113</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>242</y>
+     <x>0</x>
+     <y>590</y>
      <width>371</width>
      <height>51</height>
     </rect>
@@ -114,82 +26,102 @@
     <string>Create Event</string>
    </property>
   </widget>
-  <widget class="QGroupBox" name="groupBox">
+  <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>60</y>
-     <width>120</width>
-     <height>80</height>
+     <x>10</x>
+     <y>10</y>
+     <width>361</width>
+     <height>138</height>
     </rect>
    </property>
-   <property name="title">
-    <string>This event time is...</string>
-   </property>
-   <widget class="QRadioButton" name="radioFixed">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>82</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Fixed</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="radioButton_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>50</y>
-      <width>82</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Negotiable</string>
-    </property>
-   </widget>
+   <layout class="QGridLayout" name="gridLayout_2">
+    <item row="1" column="0">
+     <widget class="QLabel" name="location_2">
+      <property name="text">
+       <string>Location:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="duration_input_2"/>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="title_2">
+      <property name="text">
+       <string>Title:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="location_input_2"/>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="end_time_2">
+      <property name="text">
+       <string>Duration:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QTimeEdit" name="begin_time_edit_2"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="begin_time_2">
+      <property name="text">
+       <string>Begin Time:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="title_input_2"/>
+    </item>
+   </layout>
   </widget>
-  <widget class="QLabel" name="labelText">
+  <widget class="QDateEdit" name="dateEdit">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>10</x>
      <y>170</y>
-     <width>121</width>
-     <height>61</height>
+     <width>110</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="date">
+    <date>
+     <year>2016</year>
+     <month>11</month>
+     <day>11</day>
+    </date>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>200</y>
+     <width>291</width>
+     <height>361</height>
     </rect>
    </property>
    <property name="text">
-    <string>huh</string>
-   </property>
-   <property name="scaledContents">
-    <bool>false</bool>
+    <string>TextLabel</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QTimeEdit" name="timeBegin">
+  <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>130</y>
-     <width>111</width>
-     <height>22</height>
+     <x>10</x>
+     <y>570</y>
+     <width>291</width>
+     <height>16</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QTimeEdit" name="timeEnd">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>170</y>
-     <width>111</width>
-     <height>22</height>
-    </rect>
+   <property name="text">
+    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
