--- a/friends_list.ui
+++ b/friends_list.ui
@@ -18,7 +18,7 @@
     <rect>
      <x>100</x>
      <y>10</y>
-     <width>71</width>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
@@ -26,38 +26,25 @@
     <string>MY FRIENDS</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="create_new_group">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>230</y>
-     <width>111</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Create Group</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>30</x>
      <y>230</y>
-     <width>113</width>
-     <height>32</height>
+     <width>61</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Cancel</string>
+    <string>Back</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="delete_group">
+  <widget class="QPushButton" name="delete_friend">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>190</y>
-     <width>51</width>
+     <x>100</x>
+     <y>230</y>
+     <width>61</width>
      <height>30</height>
     </rect>
    </property>
@@ -65,33 +52,20 @@
     <string>Delete</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="edit_group">
+  <widget class="QPushButton" name="requests">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>190</y>
-     <width>51</width>
+     <x>170</x>
+     <y>230</y>
+     <width>61</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Edit</string>
+    <string>Requests</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="leave_group">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>190</y>
-     <width>51</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Leave</string>
-   </property>
-  </widget>
-  <widget class="QListWidget" name="list_groups">
+  <widget class="QListWidget" name="list_friends">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -99,6 +73,29 @@
      <width>241</width>
      <height>151</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="username_input">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>190</y>
+     <width>211</width>
+     <height>30</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="add_friend">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>190</y>
+     <width>31</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>+</string>
    </property>
   </widget>
  </widget>
