I made things look nicer just so it doesn't look like complete butt if we don't come up with something

--- a/home_screen.ui
+++ b/home_screen.ui
@@ -63,7 +63,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Account Settings</string>
+    <string>Settings</string>
    </property>
   </widget>
   <widget class="QLabel" name="timefuse">
