--- a/account_settings.ui
+++ b/account_settings.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>381</width>
-    <height>320</height>
+    <height>332</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -89,7 +89,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>240</y>
+     <y>250</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -102,7 +102,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>280</y>
+     <y>290</y>
      <width>361</width>
      <height>31</height>
     </rect>
@@ -115,20 +115,20 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>240</y>
+     <y>250</y>
      <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Leave of Absence</string>
+    <string>Group Absence</string>
    </property>
   </widget>
   <widget class="QPushButton" name="present">
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>240</y>
+     <y>250</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -141,7 +141,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>220</y>
+     <y>230</y>
      <width>361</width>
      <height>16</height>
     </rect>
