--- a/createevent.ui
+++ b/createevent.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>381</width>
-    <height>270</height>
+    <height>252</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>210</y>
      <width>261</width>
-     <height>51</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -102,7 +102,7 @@
      <x>280</x>
      <y>210</y>
      <width>91</width>
-     <height>51</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -112,22 +112,22 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>50</x>
      <y>190</y>
-     <width>101</width>
+     <width>121</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>This event time is...</string>
+    <string>This event time is:</string>
    </property>
   </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>170</x>
      <y>190</y>
-     <width>251</width>
+     <width>161</width>
      <height>21</height>
     </rect>
    </property>
@@ -139,7 +139,7 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>82</width>
+      <width>101</width>
       <height>17</height>
      </rect>
     </property>
@@ -153,9 +153,9 @@
    <widget class="QRadioButton" name="radioFixed">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>100</x>
       <y>0</y>
-      <width>82</width>
+      <width>61</width>
       <height>17</height>
      </rect>
     </property>
