--- a/add_group.ui
+++ b/add_group.ui
@@ -6,28 +6,39 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>332</width>
-    <height>261</height>
+    <width>430</width>
+    <height>430</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Add Group</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(76, 76, 76);</string>
+  </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
+     <x>50</x>
+     <y>60</y>
      <width>311</width>
      <height>161</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="group_name"/>
+    <item row="2" column="1">
+     <widget class="QListWidget" name="member_list">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 12pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Group Name:</string>
       </property>
@@ -35,63 +46,99 @@
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_2">
+      <property name="styleSheet">
+       <string notr="true">font: 12pt &quot;Courier&quot;;
+color: rgb(255, 255, 255);</string>
+      </property>
       <property name="text">
        <string>Participants:</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QListWidget" name="member_list"/>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="group_name">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="back_button">
+  <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>220</y>
-     <width>151</width>
-     <height>30</height>
+     <x>50</x>
+     <y>230</y>
+     <width>311</width>
+     <height>61</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Cancel</string>
-   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLineEdit" name="add_member_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>3</width>
+        <height>10</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="add_member">
+      <property name="styleSheet">
+       <string notr="true">font: 12pt &quot;Courier&quot;;
+background-color: rgb(61, 229, 229);</string>
+      </property>
+      <property name="text">
+       <string>Add Member</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QPushButton" name="add_group_button">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>220</y>
-     <width>151</width>
-     <height>30</height>
+     <x>60</x>
+     <y>300</y>
+     <width>131</width>
+     <height>23</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;Courier&quot;;
+background-color: rgb(86, 231, 115);</string>
    </property>
    <property name="text">
     <string>Add Group</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="add_member_input">
+  <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>180</y>
-     <width>211</width>
-     <height>30</height>
+     <x>220</x>
+     <y>300</y>
+     <width>131</width>
+     <height>23</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QPushButton" name="add_member">
-   <property name="geometry">
-    <rect>
-     <x>230</x>
-     <y>180</y>
-     <width>88</width>
-     <height>30</height>
-    </rect>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;Courier&quot;;
+background-color: rgb(255, 0, 128);</string>
    </property>
    <property name="text">
-    <string>Add Member</string>
+    <string>Cancel</string>
    </property>
   </widget>
  </widget>
