--- a/createevent.ui
+++ b/createevent.ui
@@ -6,21 +6,29 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>381</width>
-    <height>252</height>
+    <width>430</width>
+    <height>430</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Personal Event</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(76, 76, 76);
+font: 12pt &quot;Courier&quot;;</string>
+  </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
-     <width>261</width>
+     <x>30</x>
+     <y>300</y>
+     <width>151</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;Courier&quot;;
+background-color: rgb(86, 231, 115);</string>
    </property>
    <property name="text">
     <string>Create Event</string>
@@ -29,8 +37,8 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
+     <x>30</x>
+     <y>60</y>
      <width>361</width>
      <height>172</height>
     </rect>
@@ -38,6 +46,10 @@
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <widget class="QLabel" name="title_2">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 12pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Title:</string>
       </property>
@@ -45,6 +57,10 @@
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="location_2">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 12pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Location:</string>
       </property>
@@ -52,6 +68,10 @@
     </item>
     <item row="4" column="0">
      <widget class="QLabel" name="end_time_2">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 12pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Duration:</string>
       </property>
@@ -59,6 +79,10 @@
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="begin_time_2">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 12pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Begin Time:</string>
       </property>
@@ -66,22 +90,42 @@
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="date_label">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 12pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Date:</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="location_input_2"/>
+    <item row="4" column="1">
+     <widget class="QLineEdit" name="duration_input_2">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="title_input_2"/>
+     <widget class="QLineEdit" name="title_input_2">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
-    <item row="4" column="1">
-     <widget class="QLineEdit" name="duration_input_2"/>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="location_input_2">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QTimeEdit" name="begin_time_edit_2"/>
+     <widget class="QTimeEdit" name="begin_time_edit_2">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="2" column="1">
      <widget class="QDateEdit" name="dateEdit">
@@ -106,20 +150,34 @@
        <number>12</number>
       </property>
       <property name="value">
-       <number>-5</number>
+		<number>-5</number>
+	  </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
       </property>
-     </widget>
+      <property name="date">
+       <date>
+        <year>2016</year>
+        <month>11</month>
+        <day>11</day>
+       </date>
+      </property>	  
+    </widget>
     </item>
    </layout>
   </widget>
   <widget class="QPushButton" name="pushCancel">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>210</y>
-     <width>91</width>
+     <x>220</x>
+     <y>300</y>
+     <width>161</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;Courier&quot;;
+background-color: rgb(255, 0, 128);</string>
    </property>
    <property name="text">
     <string>Cancel</string>
@@ -129,10 +187,14 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>190</y>
-     <width>121</width>
+     <y>260</y>
+     <width>161</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
     <string>This event time is:</string>
@@ -141,8 +203,8 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>190</y>
+     <x>210</x>
+     <y>260</y>
      <width>161</width>
      <height>21</height>
     </rect>
@@ -156,8 +218,12 @@
       <x>0</x>
       <y>0</y>
       <width>101</width>
-      <height>17</height>
+      <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);
+font: 12pt &quot;Courier&quot;;</string>
     </property>
     <property name="text">
      <string>Negotiable</string>
@@ -172,8 +238,12 @@
       <x>100</x>
       <y>0</y>
       <width>61</width>
-      <height>17</height>
+      <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);
+font: 12pt &quot;Courier&quot;;</string>
     </property>
     <property name="text">
      <string>Fixed</string>
