--- a/friend_requests.ui
+++ b/friend_requests.ui
@@ -6,34 +6,49 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>265</width>
-    <height>270</height>
+    <width>432</width>
+    <height>430</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Friend Requests</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(76, 76, 76);
+font: 12pt &quot;Courier&quot;;</string>
+  </property>
   <widget class="QLabel" name="title">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>10</y>
-     <width>91</width>
+     <x>0</x>
+     <y>40</y>
+     <width>431</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+font: 17pt &quot;Courier&quot;;</string>
+   </property>
    <property name="text">
     <string>MY REQUESTS</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>230</y>
+     <x>70</x>
+     <y>290</y>
      <width>81</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 13pt &quot;Courier&quot;;
+background-color: rgb(227, 201, 69);</string>
    </property>
    <property name="text">
     <string>Back</string>
@@ -42,11 +57,15 @@
   <widget class="QPushButton" name="decline">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>230</y>
+     <x>160</x>
+     <y>290</y>
      <width>81</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 13pt &quot;Courier&quot;;
+background-color: rgb(255, 0, 128);</string>
    </property>
    <property name="text">
     <string>Decline</string>
@@ -55,11 +74,15 @@
   <widget class="QPushButton" name="accept">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>230</y>
-     <width>81</width>
+     <x>250</x>
+     <y>290</y>
+     <width>91</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 13pt &quot;Courier&quot;;
+background-color: rgb(86, 231, 115);</string>
    </property>
    <property name="text">
     <string>Accept</string>
@@ -68,11 +91,14 @@
   <widget class="QListWidget" name="list_friends">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>241</width>
-     <height>191</height>
+     <x>60</x>
+     <y>70</y>
+     <width>291</width>
+     <height>201</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
    </property>
   </widget>
  </widget>
