--- a/reset_password_window.ui
+++ b/reset_password_window.ui
@@ -6,31 +6,47 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>361</width>
-    <height>161</height>
+    <width>430</width>
+    <height>427</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Reset Password</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(76, 76, 76);
+font: 12pt &quot;Courier&quot;;</string>
+  </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
+     <x>50</x>
+     <y>80</y>
      <width>341</width>
-     <height>104</height>
+     <height>161</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="1">
-     <widget class="QLineEdit" name="email_input"/>
+     <widget class="QLineEdit" name="email_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QLineEdit" name="new_password_input"/>
+     <widget class="QLineEdit" name="new_password_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_3">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 14pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>New Password:</string>
       </property>
@@ -38,16 +54,28 @@
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_2">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 14pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Username:</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="username_input"/>
+     <widget class="QLineEdit" name="username_input">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_3">
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 14pt &quot;Courier&quot;;</string>
+      </property>
       <property name="text">
        <string>Email:</string>
       </property>
@@ -58,11 +86,15 @@
   <widget class="QPushButton" name="reset_button">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>120</y>
-     <width>171</width>
-     <height>32</height>
+     <x>80</x>
+     <y>260</y>
+     <width>111</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;Courier&quot;;
+background-color: rgb(86, 231, 115);</string>
    </property>
    <property name="text">
     <string>Reset</string>
@@ -71,11 +103,15 @@
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>120</y>
-     <width>161</width>
-     <height>32</height>
+     <x>260</x>
+     <y>260</y>
+     <width>111</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;Courier&quot;;
+background-color: rgb(255, 0, 128);</string>
    </property>
    <property name="text">
     <string>Cancel</string>
